--- a/HaarlemFestival/Views/ContentManagement/AdminNav.cshtml
+++ b/HaarlemFestival/Views/ContentManagement/AdminNav.cshtml
@@ -1,8 +1,9 @@
 ﻿<nav class=" admin col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
     <ul class="nav nav-pills flex-column">
         <li class="nav-item">@Html.ActionLink("Home", "Index", "ContentManagement")</li>
-        <li class="nav-item">@Html.ActionLink("Jazz", "Jazz", "ContentManagement")</li>
+        <li class="nav-item">@Html.ActionLink("Jazz", "Jazz", "ContentManagement")</li>        
         <li class="nav-item">@Html.ActionLink("Dinner", "Dinner", "ContentManagement")</li>
+        <li class="nav-item">@Html.ActionLink("Talking", "Talking", "ContentManagement")</li>
         <li class="nav-item">@Html.ActionLink("Historic", "Historic", "ContentManagement")</li>
         <li class="nav-item">@Html.ActionLink("Contact", "Contact", "ContentManagement")</li>
     </ul> 
