Jazz, met bbasket

--- a/HaarlemFestival/Views/Jazz/Index.cshtml
+++ b/HaarlemFestival/Views/Jazz/Index.cshtml
@@ -125,7 +125,7 @@
                 <h3>@Model.Page.PageDescriptions[16].Title</h3>
                 <label>@Model.Page.PageDescriptions[15].Title</label>
                 <input id="textboxaantal1" type="text" required>
-                <a class="btn btn-default" href="@Url.Action("OrderJazz", "CheckOut", new { id = 52, aantal = "xxxx"})" id="passpartoutorderlink1"></a>
+                <a class="btn btn-default" href="@Url.Action("OrderJazz", "CheckOut", new { id = 52, aantal = "xxxx"})" id="passpartoutorderlink1">@Model.Page.PageDescriptions[20].Title</a>
             </section>
         </section>
 
@@ -137,7 +137,7 @@
                 <h3>@Model.Page.PageDescriptions[17].Title</h3>
                 <label>@Model.Page.PageDescriptions[15].Title</label>
                 <input id="textboxaantal2" type="text" required>
-                <a class="btn btn-default" href="@Url.Action("OrderJazz", "CheckOut", new { id = 53, aantal = "xxxx"})" id="passpartoutorderlink2"></a>
+                <a class="btn btn-default" href="@Url.Action("OrderJazz", "CheckOut", new { id = 53, aantal = "xxxx"})" id="passpartoutorderlink2">@Model.Page.PageDescriptions[20].Title</a>
             </section>
         </section>
 
@@ -149,7 +149,7 @@
                 <h3>@Model.Page.PageDescriptions[18].Title</h3>
                 <label>@Model.Page.PageDescriptions[15].Title</label>
                 <input id="textboxaantal3" type="text" required>
-                <a class="btn btn-default" href="@Url.Action("OrderJazz", "CheckOut", new { id = 56, aantal = "xxxx"})" id="passpartoutorderlink3"></a>
+                <a class="btn btn-default" href="@Url.Action("OrderJazz", "CheckOut", new { id = 56, aantal = "xxxx"})" id="passpartoutorderlink3">@Model.Page.PageDescriptions[20].Title</a>
             </section>
         </section>
 
