--- a/HaarlemFestival/Views/Shared/_Layout.cshtml
+++ b/HaarlemFestival/Views/Shared/_Layout.cshtml
@@ -51,14 +51,15 @@
                         <a class="navbar-right" rel="home" href="@Url.Action("Basket", "CheckOut")" title="Haarlem Festival">
                             <img style="width: 33px; height: 28px; margin-top: -10px; margin-bottom: -10px;"
                                  src="/img/Header/Shopping_cart_header.png">
-                                @try
-                                {
-                                    <label> @ticketCookie.Value.ToString()</label>
-                                }
-                                catch
-                                {
+                               @try
+                               {
+                                    <label>@Session["BasketAantal"].ToString()</label>
+                               }
+                               catch
+                               {
                                     <label>0</label>
-                                }
+                               }
+
                         </a>
                     </li>
 
