kleine bewerkingen + modal hist req

--- a/HaarlemFestival/Views/CheckOut/Basket.cshtml
+++ b/HaarlemFestival/Views/CheckOut/Basket.cshtml
@@ -50,7 +50,7 @@
                         <div class="orderItem col-md-1">@OHT.Ticket.Price</div>
                         <div class="orderItem col-md-1">@OHT.Amount</div>
                         <div class="orderItem col-md-2">@OHT.TotalPrice</div>
-                        <div class="orderItem col-md-2">@OHT.Ticket.TimeSlot.StartTime.ToString("hh:mm dd/MM/yyyy")</div>
+                        <div class="orderItem col-md-2">@OHT.Ticket.TimeSlot.StartTime.ToString("HH:mm dd/MM/yyyy")</div>
                     </li>
                 }
             }
