--- a/HaarlemFestival/Views/Shared/_Layout.cshtml
+++ b/HaarlemFestival/Views/Shared/_Layout.cshtml
@@ -22,60 +22,62 @@
 }
 
 <body>
-    <header class="navbar navbar-inverse navbar-fixed-top">
-        <nav class="container">
-            <nav class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" rel="home" href="#" title="Haarlem Festival">
-                    <img style="max-width: 130px; margin-top: -12px;"
-                         src="/img/Header/HF_logo_header.png">
-                </a>
-            </nav>
+    <div class="content">
+        <header class="navbar navbar-inverse navbar-fixed-top">
+            <nav class="container">
+                <nav class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" rel="home" href="#" title="Haarlem Festival">
+                        <img style="max-width: 130px; margin-top: -12px;"
+                             src="/img/Header/HF_logo_header.png">
+                    </a>
+                </nav>
 
-            <nav class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Jazz", "Index", "Jazz")</li>
-                    <li>@Html.ActionLink("Dinner", "Index", "Dinner")</li>
-                    <li>@Html.ActionLink("Talking", "Index", "Talking")</li>
-                    <li>@Html.ActionLink("Historic", "Index", "Historic")</li>
-                    <li>@Html.ActionLink("Agenda", "Index", "Agenda")</li>
-                    <li>@Html.ActionLink("Contact", "Index", "Contact")</li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a class="navbar-right" rel="home" href="@Url.Action("Basket", "CheckOut")" title="Haarlem Festival">
-                            <img style="width: 33px; height: 28px; margin-top: -10px; margin-bottom: -10px;"
-                                 src="/img/Header/Shopping_cart_header.png">
-                               @try
-                               {
+                <nav class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Jazz", "Index", "Jazz")</li>
+                        <li>@Html.ActionLink("Dinner", "Index", "Dinner")</li>
+                        <li>@Html.ActionLink("Talking", "Index", "Talking")</li>
+                        <li>@Html.ActionLink("Historic", "Index", "Historic")</li>
+                        <li>@Html.ActionLink("Agenda", "Index", "Agenda")</li>
+                        <li>@Html.ActionLink("Contact", "Index", "Contact")</li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a class="navbar-right" rel="home" href="@Url.Action("Basket", "CheckOut")" title="Haarlem Festival">
+                                <img style="width: 33px; height: 28px; margin-top: -10px; margin-bottom: -10px;"
+                                     src="/img/Header/Shopping_cart_header.png">
+                                @try
+                                {
                                     <label>@Session["BasketAantal"].ToString()</label>
-                               }
-                               catch
-                               {
+                                }
+                                catch
+                                {
                                     <label>0</label>
-                               }
+                                }
 
-                        </a>
-                    </li>
+                            </a>
+                        </li>
 
-                    <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-                    <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+                        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+                        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
 
-                    <li><a href=@Url.Action("ChangeLanguage", "Home", new { language = 0 })><img src="~/img/Language/gb.svg" alt="eng" width="30" height="20" /></a></li>
-                    <li><a href=@Url.Action("ChangeLanguage", "Home", new { language = 1 })><img src="~/img/Language/nl.svg" alt="nl" width="30" height="20" /></a></li>
-                </ul>
+                        <li><a href=@Url.Action("ChangeLanguage", "Home", new { language = 0 })><img src="~/img/Language/gb.svg" alt="eng" width="30" height="20" /></a></li>
+                        <li><a href=@Url.Action("ChangeLanguage", "Home", new { language = 1 })><img src="~/img/Language/nl.svg" alt="nl" width="30" height="20" /></a></li>
+                    </ul>
+                </nav>
             </nav>
-        </nav>
-    </header>
+        </header>
 
 
-    <div class="container body-content">
-        @RenderBody()
+        <div class="container body-content">
+            @RenderBody()
+        </div>
     </div>
     <footer>
         <ul>
