--- a/HaarlemFestival/Views/CheckOut/Basket.cshtml
+++ b/HaarlemFestival/Views/CheckOut/Basket.cshtml
@@ -63,9 +63,7 @@
         }
 
         
-        @Html.ActionLink("Afrekenen", "CheckOut1", "CheckOut")
-
-
     </ul>
+    <label>Totalprice: @Model.TotalOrderPrice.ToString()</label>
 
 </section>
