Jazz admin done

--- a/HaarlemFestival/Views/Jazz/Index.cshtml
+++ b/HaarlemFestival/Views/Jazz/Index.cshtml
@@ -63,7 +63,7 @@
                 <section>
                     <section>
                         <section>
-                            <h3 id="jazz_activity_title_@Model.Activities[i].Id" class="jazz_activiteit_title">@Model.Activities[i].ActivityDescriptions[0].Title</h3>
+                            <h3 id="jazz_activity_title_@Model.Activities[i].Id" class="jazz_activiteit_title">@Model.Activities[i].Name</h3>
                             <p id="jazz_activity_description_@Model.Activities[i].Id" style="display:none">@Model.Activities[i].ActivityDescriptions[0].DescriptionText</p>
                         </section>
                         <hr class="jazz_page_actinfosection_line" />
