--- a/HaarlemFestival/Content/Admin.css
+++ b/HaarlemFestival/Content/Admin.css
@@ -1,4 +1,10 @@
-﻿input,
+﻿.modal {
+    z-index : 99;
+}
+.save-modal {
+    width : 30%;
+}
+input,
 select,
 textarea {
     max-width: 100%;
@@ -26,7 +32,7 @@ textarea {
     top: 51px;
     bottom: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 50;
     padding: 20px 0;
     overflow-x: hidden;
     overflow-y: auto;
@@ -208,7 +214,22 @@ textarea {
         font-weight: bold;
     }
 }
-
+.adminInfo {
+    color: #4e4949;
+    font-size: 0.7em;
+    font-weight: bold;
+}
 .jazz-edit {
-    display : none;
+    margin-top : 20px;
+    display: none;
+}
+.jazz-edit .panel-header {
+    border-bottom : solid  1px lightgrey;
+}
+.jazz-edit .panel-header a {
+    text-decoration: none;
+}
+.jazzImg {
+    border: solid 1px black;
+    padding: 15px;
 }
