--- a/HaarlemFestival/Views/ContentManagement/AdminNav.cshtml
+++ b/HaarlemFestival/Views/ContentManagement/AdminNav.cshtml
@@ -8,3 +8,11 @@
         <li class="nav-item">@Html.ActionLink("Contact", "Contact", "ContentManagement")</li>
     </ul> 
 </nav>
+<section id="Save-Modal" class="modal">
+
+    <!-- Modal content -->
+    <section class="modal-content save-modal">
+        <h4 class="text-center">Saving..</h4>
+    </section>
+
+</section>
